syntax = "proto3";

package identity.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 组织单元服务
service OrgUnitService {
  // 查询组织单元列表
  rpc List (pagination.PagingRequest) returns (ListOrgUnitResponse) {}

  // 统计组织单元数量
  rpc Count (pagination.PagingRequest) returns (CountOrgUnitResponse) {}

  // 查询组织单元详情
  rpc Get (GetOrgUnitRequest) returns (OrgUnit) {}

  // 创建组织单元
  rpc Create (CreateOrgUnitRequest) returns (google.protobuf.Empty) {}

  // 更新组织单元
  rpc Update (UpdateOrgUnitRequest) returns (google.protobuf.Empty) {}

  // 删除组织单元
  rpc Delete (DeleteOrgUnitRequest) returns (google.protobuf.Empty) {}

  // 批量创建组织单元
  rpc BatchCreate (BatchCreateOrgUnitsRequest) returns (BatchCreateOrgUnitsResponse) {}
}

// 组织单元
message OrgUnit {
  // 组织单元状态
  enum Status {
    OFF = 0;         // 禁用
    ON = 1;          // 启用
  }

  // 组织单元类型
  enum Type {
    COMPANY = 0;      // 公司 (Company)
    DIVISION = 1;     // 分部 (Division)
    DEPARTMENT = 2;   // 部门 (Department)
    TEAM = 3;         // 团队 (Team)
    PROJECT = 4;      // 项目 (Project)
    COMMITTEE = 5;    // 委员会 (Committee)
    REGION = 6;       // 区域 (Region)
    SUBSIDIARY = 7;   // 子公司 (Subsidiary)
    BRANCH = 8;       // 分支机构 (Branch)

    OTHER = 100;      // 其他 (Other)
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "组织单元ID"}
  ];  // 组织单元ID

  optional string name = 2 [json_name = "name", (gnostic.openapi.v3.property) = {description: "组织单元名称"}];  // 组织单元名称
  optional string code = 3 [json_name = "code", (gnostic.openapi.v3.property) = {description: "唯一编码（建议规则：部门编码 + 组织单元类型 + 序号，如 “FIN-LEADER-001”），用于数据同步和快速识别"}];  // 唯一编码（建议规则：部门编码 + 组织单元类型 + 序号，如 “FIN-LEADER-001”），用于数据同步和快速识别
  optional Type type = 4 [json_name = "type", (gnostic.openapi.v3.property) = {description: "组织类型"}];  // 组织类型
  optional string path = 5 [json_name = "path", (gnostic.openapi.v3.property) = {description: "树路径"}];  // 树路径

  optional Status status = 6 [(gnostic.openapi.v3.property) = {description: "状态"}]; // 状态
  optional uint32 sort_order = 7 [
    json_name = "sortOrder",
    (gnostic.openapi.v3.property) = {description: "排序顺序，值越小越靠前"}
  ];  // 排序顺序，值越小越靠前

  optional uint32 leader_id = 10 [
    json_name = "leaderId",
    (gnostic.openapi.v3.property) = {description: "负责人用户ID"}
  ];  // 负责人用户ID

  optional string leader_name = 11 [
    json_name = "leaderName",
    (gnostic.openapi.v3.property) = {description: "负责人用户名称"}
  ];  // 负责人用户名称

  optional uint32 tenant_id = 12 [json_name = "tenantId", (gnostic.openapi.v3.property) = {description: "租户ID"}];  // 租户ID
  optional string tenant_name = 13 [json_name = "tenantName", (gnostic.openapi.v3.property) = {description: "租户名称"}];  // 租户名称

  optional string remark = 20 [json_name = "remark", (gnostic.openapi.v3.property) = {description: "备注"}];  // 备注
  optional string description = 21 [json_name = "description", (gnostic.openapi.v3.property) = {description: "描述信息"}];  // 描述信息
  repeated string business_scopes = 22 [
    json_name = "businessScopes",
    (gnostic.openapi.v3.property) = {description: "组织的业务范围/服务条线，支持多值，便于过滤、权限映射和同步"}
  ]; // 组织的业务范围/服务条线

  optional string external_id = 100 [
    json_name = "externalId",
    (gnostic.openapi.v3.property) = {description: "外部系统ID"}
  ]; // 外部系统ID
  optional bool is_legal_entity = 101 [
    json_name = "isLegalEntity",
    (gnostic.openapi.v3.property) = {description: "是否为法定主体"}
  ]; // 是否为法定主体
  optional string registration_number = 102 [
    json_name = "registrationNumber",
    (gnostic.openapi.v3.property) = {description: "注册号/统一社会信用代码"}
  ]; // 注册号/统一社会信用代码
  optional string tax_id = 103 [
    json_name = "taxId",
    (gnostic.openapi.v3.property) = {description: "税号"}
  ]; // 税号
  optional uint32 legal_entity_org_id = 104 [
    json_name = "legalEntityOrgId",
    (gnostic.openapi.v3.property) = {description: "关联的法定主体组织ID（若有）"}
  ]; // 关联的法定主体组织ID（若有）
  optional string address = 105 [
    json_name = "address",
    (gnostic.openapi.v3.property) = {description: "详细地址"}
  ]; // 详细地址
  optional string phone = 106 [
    json_name = "phone",
    (gnostic.openapi.v3.property) = {description: "联系电话"}
  ]; // 联系电话
  optional string email = 107 [
    json_name = "email",
    (gnostic.openapi.v3.property) = {description: "联系邮箱"}
  ]; // 联系邮箱
  optional string timezone = 108 [
    json_name = "timezone",
    (gnostic.openapi.v3.property) = {description: "时区，例如：Asia/Shanghai"}
  ]; // 时区，例如 "Asia/Shanghai"
  optional string country = 109 [
    json_name = "country",
    (gnostic.openapi.v3.property) = {description: "国家/地区代码"}
  ]; // 国家/地区代码

  optional double latitude = 110 [
    json_name = "latitude",
    (gnostic.openapi.v3.property) = {description: "纬度"}
  ]; // 纬度（可选）
  optional double longitude = 111 [
    json_name = "longitude",
    (gnostic.openapi.v3.property) = {description: "经度"}
  ]; // 经度（可选）

  optional google.protobuf.Timestamp start_at = 112 [
    json_name = "startAt",
    (gnostic.openapi.v3.property) = {description: "生效开始时间（UTC）"}
  ]; // 生效开始时间（UTC）
  optional google.protobuf.Timestamp end_at = 113 [
    json_name = "endAt",
    (gnostic.openapi.v3.property) = {description: "生效结束时间（UTC）"}
  ]; // 生效结束时间（UTC）

  map<string, string> attributes = 114 [
    json_name = "attributes",
    (gnostic.openapi.v3.property) = {description: "自定义扩展属性"}
  ]; // 自定义扩展属性
  repeated string permission_tags = 115 [
    json_name = "permissionTags",
    (gnostic.openapi.v3.property) = {description: "与权限/角色映射的标签"}
  ]; // 与权限/角色映射的标签

  optional uint32 contact_user_id = 116 [
    json_name = "contactUserId",
    (gnostic.openapi.v3.property) = {description: "业务联系人用户ID"}
  ]; // 业务联系人用户ID
  optional string contact_user_name = 117 [
    json_name = "contactUserName",
    (gnostic.openapi.v3.property) = {description: "业务联系人用户名称"}
  ]; // 业务联系人用户名称

  optional uint32 parent_id = 500 [json_name = "parentId", (gnostic.openapi.v3.property) = {description: "父节点ID"}];  // 父节点ID
  repeated OrgUnit children = 501 [json_name = "children", (gnostic.openapi.v3.property) = {description: "子节点树"}];  // 子节点树

  optional uint32 created_by = 510 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 511 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 512 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 520 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 521 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 522 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 获取组织单元列表 - 答复
message ListOrgUnitResponse {
  repeated OrgUnit items = 1;
  uint64 total = 2;
}

// 获取组织单元数据 - 请求
message GetOrgUnitRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建组织单元 - 请求
message CreateOrgUnitRequest {
  OrgUnit data = 1;
}

// 更新组织单元 - 请求
message UpdateOrgUnitRequest {
  uint32 id = 1;

  OrgUnit data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除组织单元 - 请求
message DeleteOrgUnitRequest {
  uint32 id = 1;
}

message BatchCreateOrgUnitsRequest {
  repeated OrgUnit items = 1;
}
message BatchCreateOrgUnitsResponse {
  repeated int32 created_ids = 1 [
    json_name = "createdIds",
    (gnostic.openapi.v3.property) = {
      description: "创建成功的组织单元ID列表"
    }
  ]; // 创建成功的组织单元ID列表
}

message CountOrgUnitResponse {
  uint64 count = 1;
}
